added .vs to gitignore because that had the db.lock

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
       "Token":"super secret token of the server"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = D:\\home\\site\\wwwroot\\datingapp.db"
+    "DefaultConnection": "Data Source = datingapp.db"
   },
 
   "Logging": {
